# MecFem

./: .gitignore  01_test_utils.py  02_test_shape_functions.py  03_test_integration.py  04_test_mesh.py  05_test_model.py  06_test_solver.py  LICENSE  README.md  out_test.msh  pyproject.toml  run.py  run_lin.py  test_selector.py
MecFEM/: __init__.py  data_struct.py  element.py  model.py  post.py  solver.py
MecFEM/boundary_conditions/: __init__.py  step.py  volumetric.py
MecFEM/elements/: __init__.py  non_linear.py
MecFEM/geometry/: __init__.py  integration.py  shape_functions_todo.py  utils.py
MecFEM/materials/: istropic_elasticity.py
MecFEM/mesh/: __init__.py  mesh_struct.py  plot.py  read.py
MecFEM/models/: non_linear.py
app/: README.md  pyproject.toml
app/src/: contexts.py  main.py  page_data.py  states.py  test.py
app/src/assets/: colors.toml  config.toml
app/src/components/: __init__.py  app_bar.py  base_page.py  buttons.py  dialogs.py  material.py  mesh.py  model.py  navigation_bar.py  navigation_rail.py  panel.py  setup.py  simulation_status.py  theme_button.py  tooltip.py
app/src/components/charts/: __init__.py  _mesh_gesture_detetor.py  _mesh_lines.py  _mesh_nodes.py  _states.py  _utils.py  data.py  mesh.py  mesh_boundary_elements.py  mesh_node_selector.py  mesh_selector.py  mesh_volume_elements.py  states.py
app/src/pages/: __init__.py  _base.py  bc.py  home.py  material.py  mesh.py  model.py  post.py  run.py  setup.py
app/src/structures/: __init__.py  chart.py  contexts.py  enums.py  states.py
app/src/themes/: __init__.py  button.py  dialog.py  dropdown.py  navigation_bar.py  navigation_rail.py  text.py  text_button.py  tooltip.py
app/src/utils/: __init__.py  stringtools.py  tomltools.py
docs/: main.aux  main.out  main.tex  main.toc
examples/: run_linear.py  run_non_linear.py
mesh/: cylinder_quad.msh  line.msh  rect.msh
test/: 01_test_utils.py  02_test_shape_functions.py  03_test_integration.py  04_test_mesh.py  05_test_model.py  05_test_model_linear.py  06_test_model_non_linear.py  06_test_solver.py  07_test_model_load_non_linear.py
(+79 files in other folders)
