[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MecFEM"
version = "0.1.0"
description = "A Finite Element Method solver for mechanical engineering applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Jezler"}
]
keywords = ["FEM", "finite element", "mechanical engineering", "solver", "structural analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "gmsh>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/GabrielJezler/MecFem"
Repository = "https://github.com/GabrielJezler/MecFem"
Issues = "https://github.com/GabrielJezler/MecFem/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["MecFEM*"]
exclude = ["test*", "mesh*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_test_*.py", "test_*.py"]
pythonpath = ["."]

